--- a/detail_zypressen.html
+++ b/detail_zypressen.html
@@ -29,11 +29,12 @@
           <h2>ZYPRESSEN</h2>
           <div class="detail_title_item">
             <span>created  : May,20.2020 </span>
+            <a href="https://zypressen.org/">view project</a>
           </div>
         </div>
         <img src="img\thumbnail.png" alt="">
         <p>
-私が在籍している、クリエイティブチーム「ZYPRESSEN」のwebサイトの制作に現在取り組んでいます。主にサイトデザイン、ディレクションを担当しています。クリエイティブチームの象徴である「ayumu」をチームの3dデザイナーに制作してもらい、メインビジュアルに使用しました。</p>
+私が在籍している、クリエイティブチーム「ZYPRESSEN」のwebサイトを制作しました。主にサイトデザイン、ディレクションを担当しています。クリエイティブチームの象徴である「ayumu」をチームの3dデザイナーに制作してもらい、メインビジュアルに使用しました。</p>
         <img src="img\thumbnail_1.png" alt="">
         <img src="img\thumbnail_2.png" alt="">
         <img src="img\thumbnail_3.png" alt="">
