--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="site_header">
       <div class="logo_wrap">
         <h1 class="logo">
-          <a href="index - コピー.html">KENTARO SUZUKI</a>
+          <a href="index.html">KENTARO SUZUKI</a>
         </h1>
       </div>
       <div class="sns_wrap">
